# bachlorsdegree

./: README.md
APP/: github  github.pub
APP/uebung1/: app1.java
APP/uebung2/: build.xml
APP/uebung2/app/exercise/algebra/doc/: allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  type-search-index.js
APP/uebung2/app/exercise/testing/java/: RationalTesting.java  rpn.java
APP/uebung3/: build.xml
APP/uebung3/app/exercise/adt/doc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  type-search-index.js
APP/uebung3/app/exercise/adt/java/: BSTree.java
APP/uebung3/app/exercise/algebra/doc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  type-search-index.js
APP/uebung3/app/exercise/algebra/java/: CompRational.java  Fractional.java  Rational.java
APP/uebung3/app/exercise/testing/doc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  type-search-index.js
APP/uebung3/app/exercise/testing/java/: BSTreeTester.java  RationalTesting.java  rpn.java  test.java
APP/uebung3/app/exercise/visualtree/: .DrawableNode.java.swp
APP/uebung3/app/exercise/visualtree/doc/: allclasses-index.html  allpackages-index.html  index.html  (+8 more)
APP/uebung4/: AppDrawEvent.java
APP/uebung5/: build.xml
APP/uebung5/app/doc/: AppDrawEvent.html  allclasses-index.html  allpackages-index.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-summary.html  package-tree.html  type-search-index.js
APP/uebung5/app/java/: AppDrawEvent.java
Deep_Learning/: README.md  deep_learning_1.ipynb  deep_learning_2.ipynb  deep_learning_3.ipynb
UniGoettingenAPP2022/: README.md  github
UniGoettingenAPP2022/appgefahren/: build.xml
UniGoettingenAPP2022/appgefahren/doc/doerfer/: AIPlayer.html  AdvancedDrawableTile.html  AdvancedGameConfiguration.html  AdvancedGameView.AdvancedKeyListener.html  AdvancedGameView.AdvancedMouseWheelListener.html  AdvancedGameView.DummyMA.html  AdvancedGameView.html  AdvancedPlayer.html  AdvancedTile.html  AdvancedTilePlaced.html  Board.html  BooleanHolder.html  DummyTile.html
UniGoettingenAPP2022/appgefahren/exampleconfigs/: README.md  multiplayer_2.txt  multiplayer_2_ai.txt  multiplayer_2_easy.txt  multiplayer_3.txt  multiplayer_3_ai.txt  multiplayer_4.txt  multiplayer_4_ai.txt  multiplayer_coop.txt  multiplayer_coop_ai.txt  singleplayer.txt
UniGoettingenAPP2022/appgefahren/exampleconfigs/reduced/: multiplayer_2.txt  multiplayer_2_ai.txt  multiplayer_3.txt  multiplayer_3_ai.txt  multiplayer_4.txt  multiplayer_4_ai.txt  multiplayer_coop.txt  multiplayer_coop_ai.txt
UniGoettingenAPP2022/appgefahren/lib/: commons-cli-NOTICE.txt  svgSalamander-LICENSE.txt
UniGoettingenAPP2022/appgefahren/src/doerfer/: AIPlayer.java  AdvancedDrawableTile.java  AdvancedGameConfiguration.java  AdvancedGameView.java  AdvancedPlayer.java  AdvancedTile.java  AdvancedTilePlaced.java  Board.java  DummyTile.java  MainFrame.java  Observer.java
UniGoettingenAPP2022/appgefahren/src/doerfer/Config/: Beispielconfig.txt
bachlor_internship/: Structure.md  bb.ipynb  colorsegment_movie.ipynb  create_graphics.ipynb  depth_models.ipynb  extract_values.ipynb  final_approach.ipynb  model_size.py  sam_parameter_test.py  segment_anything_parameter_testing.ipynb  test.py  testing_extracted_features.py  testing_yolo.ipynb
bachlor_internship/final/: final_eval_movie.py  para_testing.py  test_save_npy.py  yolo_davis.py
bachlor_internship/logs/: final_eval_best_values  final_eval_best_values_on_test_set  own_approach_first_train  own_approach_second_train  sam_last_run  sam_opt  sam_opt_more_masks  sam_test_30  sam_test_35  sam_yolo_runs
betriebsysteme/z1/: fork.c  testat  zombie.c
betriebsysteme/z2/: thread  thread.c  ue2-a1.c
betriebsysteme/z3/: filetoread  sharedmemory1.c  sharedmemory2-1.c  sharedmemory2-2.c  thread  thread2
betriebsysteme/z4/: socketc  socketc.c  sockets  sockets.c
disto/: data  froggame.py
hpc-2023-bee-simulation/: README.md
hpc-2023-bee-simulation/code/: CMakeLists.txt  README.md  flake.nix  meson.build  runbenchmark.py  runbenchmark.sh
hpc-2023-bee-simulation/code/benchmarks/: benchmark_results_visualization.ipynb  point_tree.cpp  results.json
hpc-2023-bee-simulation/code/media/Tex/: 6f25f4dafcf3ce9b.xdv  82d27d84fcf1269b.xdv  e2c85f819f1e5e13.xdv  fa706abefbf19fe6.xdv  fe7148c7f2edae80.dvi
hpc-2023-bee-simulation/code/mpi/: mpi_send_struct.cpp
hpc-2023-bee-simulation/code/src/: main.cpp
hpc-2023-bee-simulation/code/src/agents/: agent.cpp  agent.hpp  agent_type.cpp  agent_type.hpp  bee.cpp  bee.hpp  flower.cpp  flower.hpp  hive.cpp  hive.hpp
hpc-2023-bee-simulation/code/src/utils/: coordinates.hpp  ctd_array.hpp  point_tree.hpp
hpc-2023-bee-simulation/code/src/world/: chunking.cpp  chunking.hpp  configuration.hpp  generator.cpp  generator.hpp  seeding.cpp  seeding.hpp  worldstate.cpp  worldstate.hpp
hpc-2023-bee-simulation/code/subprojects/Catch2-3.4.0/: .meson-subproject-wrap-hash.txt
hpc-2023-bee-simulation/code/subprojects/benchmark-1.7.1/: .meson-subproject-wrap-hash.txt
hpc-2023-bee-simulation/code/subprojects/googletest-1.13.0/: .meson-subproject-wrap-hash.txt
hpc-2023-bee-simulation/code/subprojects/spdlog-1.12.0/: .meson-subproject-wrap-hash.txt
hpc-2023-bee-simulation/code/tests/: matchers.hpp  test_agents.cpp  test_chunking.cpp  test_ctd_array.cpp  test_point_tree.cpp  test_worldstate.cpp
info3/: picture.java
numerik/: cgvorkonditioniert.py  gauspivot.py  ldl.py  newton.py  qr_normal_basis.py
numerik/temp/: elipse.py  matrixfreecg.py
(+56 files in other folders)
